--- a/package.json
+++ b/package.json
@@ -54,16 +54,19 @@
     "react": "^17"
   },
   "devDependencies": {
-    "react": "^17",
     "@modern-js/module-tools": "^1.0.0",
     "@modern-js/plugin-jarvis": "^1.0.0",
+    "@modern-js/plugin-storybook": "^1.1.3",
     "@modern-js/plugin-testing": "^1.0.0",
-    "del-cli": "^4.0.1",
-    "typescript": "^4",
+    "@modern-js/runtime": "^1.1.1",
     "@types/jest": "^26.0.9",
     "@types/node": "^14",
     "@types/react": "^17",
-    "@types/react-dom": "^17"
+    "@types/react-dom": "^17",
+    "del-cli": "^4.0.1",
+    "react": "^17",
+    "storybook-addon-mock": "^2.0.1",
+    "typescript": "^4"
   },
   "sideEffects": [
     "*.css",
