--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
     "dist/"
   ],
   "dependencies": {
-    "@babel/runtime": "^7"
+    "@antv/g": "^5.0.1",
+    "@antv/g-canvas": "^1.0.1",
+    "@babel/runtime": "^7",
+    "lodash": "^4.17.21",
+    "throttle-debounce-ts": "^1.1.1"
   },
   "peerDependencies": {
     "react": "^17"
@@ -60,6 +64,7 @@
     "@modern-js/plugin-testing": "^1.0.0",
     "@modern-js/runtime": "^1.1.1",
     "@types/jest": "^26.0.9",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^14",
     "@types/react": "^17",
     "@types/react-dom": "^17",
