--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@antv/g": "^5.0.8",
     "@antv/g-canvas": "^1.0.7",
     "@babel/runtime": "^7",
+    "antd": "^4.18.5",
     "lodash": "^4.17.21",
     "throttle-debounce-ts": "^1.1.1"
   },
