--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gantter-g",
-  "version": "0.1.0",
+  "version": "1.0.11",
   "jsnext:source": "./src/index.ts",
   "types": "./dist/types/index.d.ts",
   "main": "./dist/js/node/index.js",
   "module": "./dist/js/treeshaking/index.js",
   "jsnext:modern": "./dist/js/modern/index.js",
+  "license": "ISC",
   "scripts": {
     "prepare": "modern build",
     "prepublishOnly": "modern build --platform",
